# RUL-Prediction-using-CNN-and-LSTM

./: .pylintrc  README copy 2.md  README copy.md  README.md  bilstm.ipynb  config.py  network_checkpoint_dataset_two.pth  own_cnn copy.py  own_cnn.ipynb  pyproject.toml  requirements.txt
models/: network_checkpoint3 copy1.pth  network_checkpoint4.1.pth  network_checkpoint_two_datasets.pth
models/Bi-LSTM/checkpoints/: checkpoint_epoch_0.pth  checkpoint_epoch_1.pth  checkpoint_epoch_10.pth  checkpoint_epoch_11.pth  checkpoint_epoch_12.pth  checkpoint_epoch_13.pth  checkpoint_epoch_14.pth  checkpoint_epoch_15.pth  checkpoint_epoch_16.pth  checkpoint_epoch_17.pth  checkpoint_epoch_18.pth  checkpoint_epoch_19.pth  checkpoint_epoch_2.pth  checkpoint_epoch_3.pth  checkpoint_epoch_4.pth  checkpoint_epoch_5.pth  checkpoint_epoch_6.pth  checkpoint_epoch_7.pth  checkpoint_epoch_8.pth  checkpoint_epoch_9.pth
models/Bi-LSTM/complete_models/: n_cmapss_lstm_model.pth
models/CNN/: network_checkpoint3 copy2.pth  network_checkpoint3.pth  network_checkpoint4.pth  network_checkpoint_dataset_two.pth
src/: cnn.py  data_loader.py
trained_models/: network_checkpoint.pkl  network_checkpoint2.pth  network_checkpoint_4.2 copy.pth  network_checkpoint_4.2.pth
