[project]
name = "cmapps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "graphviz>=0.21",
    "h5>=0.12.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "mkdocs>=1.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "ruff>=0.15.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[tool.black]
line-length = 100


